<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parallel_gripper_controller_moveit_plugin</name>
  <version>0.0.1</version>
  <description>parallel_gripper_controller MoveIt Plugin</description>
  <maintainer email="jafar.uruc@gmail.com">Jafar Uruc</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
